# etch

./: .gitignore  0:1-tsx.json  4527:184066-tsx.json  ASSET_RELOCATOR_README.md  Cargo.toml  Design.tsx  README.md  app_0.1.tsx
cli/: Cargo.toml  readme.md
cli/bindings/: AccordionOptions.ts  Callback.ts  ComponentWrapper.ts  DialogContent.ts  FigmaConversion.ts  FunctionParameter.ts  FunctionType.ts  HandlerFunction.ts  PopoverOptions.ts  RawHtml.ts  SheetButton.ts  SheetOptions.ts  ShowToastOptions.ts  TypeArgument.ts  TypeExpression.ts
cli/src/: core.rs  figma_conversion.rs  lib.rs
crates/etch_core/: Cargo.toml
crates/etch_core/src/: formatting.rs  lib.rs  walk.rs
crates/etch_figma/: Cargo.toml  openapi.yaml
crates/etch_figma/src/: lib.rs  rich_text.rs
crates/etch_html/: Cargo.toml
crates/etch_html/src/: file.rs  lib.rs  rc_dom.rs
crates/etch_html/src/visitor/: asset_visitor.rs  link_visitor.rs  mod.rs  rich_text_transform_visitor.rs  svg_extractor_visitor.rs  text_collector_visitor.rs
crates/etch_md/: Cargo.toml  README.md
crates/etch_md/src/: lib.rs
crates/etch_md/src/transformers/: footnote.rs  mod.rs  rust.rs  tailwind.rs
crates/etch_nextjs/: Cargo.toml
crates/etch_nextjs/bindings/: AppRouterEntry.ts  AppRouterFileKind.ts  AssetFolderKind.ts  Directory.ts  File.ts
crates/etch_nextjs/src/: lib.rs
crates/etch_svg/: Cargo.toml
crates/etch_svg/src/: lib.rs
crates/etch_tsx/: Cargo.toml
crates/etch_tsx/bindings/: AccordionItem.ts  AnimationConfig.ts  AnimationType.ts  CarouselItem.ts  CarouselOptions.ts  CloseDropdownOptions.ts  CloseSheetOptions.ts  ComponentWrapper.ts  DialogContent.ts  DialogOptions.ts  ElementCallbacks.ts  FilterVisitor.ts  FramerMotionVisitor.ts  GlowFilterProps.ts  HoverCardOptions.ts  InjectShadcnUiVisitor.ts  LinkOptions.ts  OpenModalOptions.ts  RawHtml.ts  RoutingLibrary.ts  ToastOptions.ts  ToggleAccordionOptions.ts  ToggleModalOptions.ts  TooltipOptions.ts
crates/etch_tsx/src/: error.rs  file.rs  lib.rs  pipeline.rs  raw_html.rs
crates/etch_tsx/src/visitor/: asset_visitor.rs  extract_color_theme.rs  filter_visitor.rs  framer_motion_visitor.rs  inject_callbacks_visitor.rs  inject_shadcn_ui_visitor.rs  inject_uuid_visitor.rs  mod.rs  nextjs_visitor.rs  svg_react_visitor.rs  xlink_visitor.rs
crates/etch_tsx/src/visitor/inject_shadcn_ui_visitor/: accordion.rs  button.rs  carousel.rs  dangerously_set_node.rs  dialog.rs  drawer.rs  hover_card.rs  link.rs  mod.rs  popover.rs  sheet.rs  tooltip.rs
example-svgs/: example.tsx
examples/: data_file_example.tsx  filter_visitor_integration_test.tsx  glow_filter_example.tsx  link_button_example.tsx  sample_component.tsx
figma-app/: .prettierrc  package-lock.json  package.json
figma-app/scripts/: export-file-tree.ts
figma-app/src/: app.config.json  app.config.ts  file-tree.json  file-tree.ts
figma-app/src/app/: font-face.css  globals.css  layout.tsx
figma-app/src/app/(pages)/: layout.tsx  slides\page.tsx
figma-app/src/app/(pages)/slides/: page.tsx
figma-app/src/app/introduction/: page.tsx
figma-app/src/types/: Action.ts  AddWrappersAndCallbacksVisitor.ts  AppRouterDirectoryKind.ts  ButtonOptions.ts  CloseModalOptions.ts  DialogButton copy.ts  DialogOptions.ts  Directory.ts  DrawerOptions copy.ts  Event copy.ts  FigmaConversion.ts  FigmaExportVisitor.ts  File.ts  InjectCallbacksVisitor.ts  LinkOptions.ts  ObjectProperty.ts  OpenDropdownOptions.ts  OpenSheetOptions.ts  SelectTabOptions.ts  SonnerOptions.ts
test/input/: basic.html
test/output/: basic.html
