[workspace]
members = ["cli", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Hector Crean <hectorcrean@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
etch_core = { path = "crates/etch_core" }
etch_html = { path = "crates/etch_html" }
etch_md = { path = "crates/etch_md" }
etch_tsx = { path = "crates/etch_tsx" }
etch_figma = { path = "crates/etch_figma" }
etch_nextjs = { path = "crates/etch_nextjs" }
etch_svg = { path = "crates/etch_svg" }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.3"
thiserror = "1.0.59"
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.6.0", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
walkdir = "2.3.3"
strum = { version = "0.26.0", features = ["derive"] }
swc_ecma_parser = "10.0.0"
swc_ecma_visit = "8.0.0"
swc_common = "8.0.0"
swc_ecma_ast = "8.0.0"
swc_ecma_codegen = "8.0.1"
swc_atoms = "5.0.0"
regex = "1.9.1"
reqwest = { version = "0.12.0", features = ["json", "blocking"] }
tokio = { version = "1.39.0", features = ["full"] }
url = "2.4.0"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.0.0"
ts-rs = "10.1.0"
svgr-rs = "0.2.0"

[profile.release]
opt-level = 3
lto = true
