[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
etch_core = { workspace = true }
etch_html = { workspace = true }
etch_tsx = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
dotenv = { workspace = true }
tokio ={ workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
color-name = "1.1.0"
palette = "0.7.6"