cargo-features = ["edition2024"]
[package]
name = "etch_html"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
etch_core = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

strum = { workspace = true }

markup5ever = "0.14.0"
html5ever = "0.29.0"
uuid = { version = "1.6.0", features = ["v4", "serde"] }
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.0"
walkdir = "2.0.2"
tendril = "0.4.0"
dotenv = "0.15.0"
reqwest = { workspace = true }
tokio ={ workspace = true }
url = { workspace = true }
colored = { workspace = true }

