[package]
name = "etch_tsx"
version = "0.1.0"
edition.workspace = true

[dependencies]
color-eyre =  { workspace =  true }
thiserror = { workspace = true }
dotenv =  { workspace = true }
env_logger =  { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
etch_svg = { workspace = true }
swc_common =  { workspace = true }
swc_ecma_ast =  { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_ecma_parser =  { workspace = true }
swc_ecma_visit =  { workspace = true }
swc_atoms = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
